--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <!-- 3D Models -->
                     <a href="#" class="project-card">
                         <div class="project-image">
-                            <img src="img/model_kuro_10.png" alt="アヒルパーカマン"
+                            <img src="img/img.png" alt="アヒルパーカマン"
                             onerror="showModelPreview(this)">
                             <div class="model-preview" style="display:none; width:100%; height:100%;"></div>
                         </div>
