--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                     </a>
 
                     <!-- 3D Models -->
-                    <a href="#" class="project-card">
+                    <a href="detail_html\blender\moon.html" class="project-card">
                         <div class="project-image">
-                            <img src="img/img.png" alt="アヒルパーカマン"
-                            onerror="showModelPreview(this)">
+                            
+                            <img src="img/img.png" alt="アヒルパーカマン">
                             <div class="model-preview" style="display:none; width:100%; height:100%;"></div>
                         </div>
                         <div class="project-content">
