--- a/detail_html/blender/moon.html
+++ b/detail_html/blender/moon.html
@@ -6,6 +6,7 @@
     <title>Blenderで月を作る</title>
     <link rel="stylesheet" href="../../style.css">
     <script src="../../script.js" defer></script>
+    <script src="../../main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
 </head>
@@ -24,39 +25,6 @@
     <!--3Dモデル表示-->
     <div id="model-viewer">
         <canvas id="three-canvas"></canvas>
-
-        <script>
-            // Three.jsを使って3Dモデルを表示するコード
-            const scene = new THREE.Scene();
-            const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
-            const renderer = new THREE.WebGLRenderer({ canvas: document.getElementById('three-canvas') });
-            renderer.setSize(window.innerWidth, window.innerHeight);
-            document.body.appendChild(renderer.domElement);
-
-            const loader = new THREE.GLTFLoader();
-            loader.load('/model/test.glb', function(gltf) {
-                scene.add(gltf.scene);
-                gltf.scene.scale.set(0.5, 0.5, 0.5); // モデルのスケール調整
-                gltf.scene.position.set(0, 0, -5); // モデルの位置調整
-                animate();
-            });
-
-            function animate() {
-                requestAnimationFrame(animate);
-                renderer.render(scene, camera);
-            }
-
-            camera.position.z = 5;
-
-            window.addEventListener('resize', function() {
-                const width = window.innerWidth;
-                const height = window.innerHeight;
-                renderer.setSize(width, height);
-                camera.aspect = width / height;
-                camera.updateProjectionMatrix();
-            });
-        </script>
-
     </div>
     <main>
         <section>
