--- a/detail_html/blender/moon.html
+++ b/detail_html/blender/moon.html
@@ -3,44 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blenderで月を作る</title>
-    <link rel="stylesheet" href="../../style.css">
-    <script src="../../script.js" defer></script>
-    <script src="../../main.js" defer></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.160.0/examples/js/loaders/GLTFLoader.js"></script>
+    <title>Three.js 3Dモデルビューア</title>
+    <link rel="stylesheet" href="blender.css">
 </head>
 <body>
-    <header>
-        <h1>Blenderで月を作る</h1>
-        <nav>
-            <ul>
-                <li><a href="../../index.html">ホーム</a></li>
-                <li><a href="../../blender.html">Blenderのチュートリアル一覧</a></li>
-                <li><a href="/model/path_test.html">月の作成</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <!--3Dモデル表示-->
-    <div id="model-viewer">
-        <canvas id="three-canvas"></canvas>
+    <div id="container">
+        <div id="controls">
+            <h3>3Dモデルビューア</h3>
+            <input type="file" id="file-input" accept=".gltf,.glb" />
+            <div>
+                <button id="reset-camera">カメラリセット</button>
+                <button id="toggle-wireframe">ワイヤーフレーム</button>
+            </div>
+            <div>
+                <label>ライトの強さ: <input type="range" id="light-intensity" min="0" max="3" step="0.1" value="1"></label>
+            </div>
+        </div>
+        
+        <div id="loading">モデルを読み込み中...</div>
+        
+        <div id="info">
+            <div>操作方法:</div>
+            <div>• マウスドラッグ: 回転</div>
+            <div>• ホイール: ズーム</div>
+            <div>• Right-click + ドラッグ: パン</div>
+        </div>
     </div>
-    <main>
-        <section>
-            <h2>太陽系を作成する一貫で作成したプロジェクトです。</h2>
-            <p>この月はNASAのデータをもとに作成しました。
-        </section>
 
-        <section>
-            <h2>参考リンク</h2>
-            <ul>
-                <li><a href="https://www.blender.org/">Blender公式サイト</a></li>
-                <li><a href="https://docs.blender.org/manual/en/latest/">Blenderマニュアル</a></li>
-            </ul>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 Blenderチュートリアル</p>
-    </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="blender.js"></script>
+</body>
+</html>
