--- a/detail_html/blender/moon.html
+++ b/detail_html/blender/moon.html
@@ -30,17 +30,15 @@
             </div>
             <div>
                 <input type="file" id="file-input" accept=".gltf,.glb" style="display: none;" />
-                <button onclick="document.getElementById('file-input').click()">ファイルから読み込み</button>
             </div>
-        </div>
-        
-        <div id="loading">モデルを読み込み中...</div>
-        
+        </div>               
         <div id="info">
             <div>操作方法:</div>
             <div>• マウスドラッグ: 回転</div>
             <div>• ホイール: ズーム</div>
             <div>• Right-click + ドラッグ: パン</div>
+            <li><a href="#top">TOP</a></li>
+            <li><a href="#works">Works</a></li>
         </div>
     </div>
 
