--- a/detail_html/blender/moon.html
+++ b/detail_html/blender/moon.html
@@ -37,8 +37,8 @@
             <div>• マウスドラッグ: 回転</div>
             <div>• ホイール: ズーム</div>
             <div>• Right-click + ドラッグ: パン</div>
-            <li><a href="#top">TOP</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="/index.html#top">TOP</a></li>
+            <li><a href="/index.html#works">Works</a></li>
         </div>
     </div>
 
