--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
 
                     <!-- 3D Models -->
                     <a href="#" class="project-card">
-                        <div class="project-image">
-                            
+                        <div class="project-image">                           
                             <img src="img/img.png" alt="アヒルパーカマン">
                             <div class="model-preview" style="display:none; width:100%; height:100%;"></div>
                         </div>
@@ -93,7 +92,7 @@
                             <h3 class="project-title">アヒルパーカマン</h3>
                             <div class="project-duration">制作期間：1週間</div>
                             <p class="project-description">Blenderで制作した人形ローポリモデル。キャラクター性を重視したデザイン。</p>
-                            <p><a href="detail_html/blender/moon.html">モデルを見る</a></p>
+                            <p class="project-description"></pclass>><a href="detail_html/blender/moon.html">モデルを見る</a></p>
                             <ul class="project-tags">
                             <li>Blender</li>
                             <li>3Dモデリング</li>
