--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
                             <h3 class="project-title">アヒルパーカマン</h3>
                             <div class="project-duration">制作期間：1週間</div>
                             <p class="project-description">Blenderで制作した人形ローポリモデル。キャラクター性を重視したデザイン。</p>
-                            <p class="project-description"><a href="detail_html/blender/moon.html">モデルを見る</a></p>
+                            <button onclick="location.href='detail_html/blender/moon.html'">モデルを見る</button>                            
                             <ul class="project-tags">
                             <li>Blender</li>
                             <li>3Dモデリング</li>
                             </ul>
+                            
                         </div>
+                        
                     </a>
 
                     <a href="#" class="project-card">
