--- a/detail_html/blender/moon.html
+++ b/detail_html/blender/moon.html
@@ -51,6 +51,8 @@
             <div class="model-info">
                 <button id="reset-position" class="control-button">位置リセット</button>
                 <button id="auto-rotate" class="control-button">自動回転切替</button>
+                <a href="../../index.html#top" class="control-button">TOP</a>
+                <a href="../../index.html#works" class="control-button">作品一覧</a>
             </div>
         </div>
         
