--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h2 class="section-title">Works</h2>
                 <div class="portfolio-grid">
                     <!-- Unity Game -->
-                     <!-- 
+
                     <div class="project-card" onclick="openModal('cloud')">
                         <div class="project-image">
                             <div class="in-progress">制作中</div>
@@ -98,7 +98,7 @@
                                 <li>Kotlin</li>
                             </ul>
                         </div>
-                    </div> -->
+                    </div>
                     <!-- 3D Models --> 
                     <div class="project-card" onclick="openModal('UsefullDevice')">
                         <div class="project-image">
